--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "medusa-plugin-typesense",
-  "version": "0.0.1",
-  "description": "Typesense search plugin for Medusa",
+  "name": "medusa-plugin-typesense-voxsar",
+  "version": "0.0.2",
+  "description": "Typesense search plugin for Medusa Voxsar",
   "engines": {
     "node": ">=16"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ybirader/medusa-plugin-typesense"
+    "url": "https://github.com/voxsar/medusa-plugin-typesense-voxsar"
   },
   "files": [
     "dist"
   ],
-  "author": "Yusuf Birader",
+  "author": "Miyuru Dharmage",
   "license": "MIT",
   "scripts": {
     "prepare": "cross-env NODE_ENV=production npm run build",
